--- a/src/scss/components/_workoutCard.scss
+++ b/src/scss/components/_workoutCard.scss
@@ -38,7 +38,6 @@
     .values {
       display: flex;
       justify-content: space-between;
-      align-items: center;
       text-align: center;
       font-size: 0.8rem;
       .duration,
